Created homepage and added bootstrap to index file

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,25 @@
-<p>
-  homepage works!
-</p>
+  <div class="container-fluid">
+  	<div>
+  		<img src="http://placehold.it/2000x500?text=Hero" class="img-fluid" />
+  		<button style="position:absolute;top:0;right:0;">Login</button>
+  	</div>
+  	<div class="bg-secondary">
+  		<h2>What?</h2>
+  		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quasi fugit eligendi, pariatur ipsa suscipit. Expedita fugiat, eius dolorum officia vel, natus suscipit atque tempore repudiandae praesentium consequatur, aperiam illum.</p>
+  	</div>
+  	<div class="bg-light">
+  		<h2>Why?</h2>
+  		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quasi fugit eligendi, pariatur ipsa suscipit. Expedita fugiat, eius dolorum officia vel, natus suscipit atque tempore repudiandae praesentium consequatur, aperiam illum.</p>
+  	</div>
+  	<div>
+  		<img src="http://placehold.it/2000x500?text=Hero" class="img-fluid" /><br />
+  		<div class="row">
+  			<div class="col-md-6">
+  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor est velit impedit, nam autem tempora deleniti delectus iste porro nostrum ut harum sunt quam facilis labore, quidem. Nulla, facilis, odio.</p>
+  			</div>
+  			<div class="col-md-6">
+  				<button>Sign Up!</button>
+  			</div>
+  		</div>
+  	</div>
+  </div>
