--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,3 +1,56 @@
-<p>
-  sign-up works!
-</p>
+
+  <div class="container-fluid">
+  	<div class="mb-2">
+		<img src="http://placehold.it/200x100?text=Logo" alt="" />
+  	</div>
+  	<div>
+  		<img src="http://placehold.it/2000x200?text=Image" class="img-fluid" />
+  	</div>
+  	<div>
+  		<form>
+  		  <div class="form-group">
+  		    <label for="exampleInputEmail1">Email address</label>
+  		    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+  		    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  		  </div>
+  		  <div class="form-group">
+  		    <label for="password">Password</label>
+  		    <input type="password" class="form-control" id="password" placeholder="Password">
+  		  </div>
+  		  <div class="form-group">
+  		      <label for="exampleFormControlInput1">Full Name</label>
+  		      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Dan Rhoton">
+  		  </div>
+  		  <div class="form-group">
+  		      <label for="exampleFormControlInput1">Phone Number</label>
+  		      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Dan Rhoton">
+  		  </div>
+  		  <div class="form-group">
+  		      <label for="address">Address</label>
+  		      <input type="text" class="form-control" id="address" placeholder="">
+  		  </div>
+  		  <div class="row">
+  		  	<div class="col-md-7">
+  		  		<div class="form-group">
+  		  		    <label for="city">City</label>
+  		  		    <input type="text" class="form-control" id="city" placeholder="">
+  		  		</div>
+
+  		  	</div>
+  		  	<div class="col-md-2">
+  		  		<div class="form-group">
+  		  		    <label for="state">State</label>
+  		  		    <input type="text" class="form-control" id="state" placeholder="">
+  		  		</div>
+  		  	</div>
+  		  	<div class="col-md-5">
+  		  		<div class="form-group">
+  		  		    <label for="zip">Zip Code</label>
+  		  		    <input type="text" class="form-control" id="zip" placeholder="">
+  		  		</div>
+  		  	</div>
+  		  </div>
+   		  <button type="submit" class="btn btn-primary">Submit</button>
+  		</form>
+  	</div>
+  </div>
