--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,5 +1,5 @@
 
-  <div class="container-fluid">
+  <div class="container-fluid text-left">
   	<div class="mb-2">
 		<img src="http://placehold.it/200x100?text=Logo" alt="" />
   	</div>
@@ -9,8 +9,8 @@
   	<div>
   		<form>
   		  <div class="form-group">
-  		    <label for="exampleInputEmail1">Email address</label>
-  		    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+  		    <label for="email">Email address</label>
+  		    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
   		    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   		  </div>
   		  <div class="form-group">
@@ -18,12 +18,12 @@
   		    <input type="password" class="form-control" id="password" placeholder="Password">
   		  </div>
   		  <div class="form-group">
-  		      <label for="exampleFormControlInput1">Full Name</label>
-  		      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Dan Rhoton">
+  		      <label for="fullName">Full Name</label>
+  		      <input type="text" class="form-control" id="fullName" placeholder="Dan Rhoton">
   		  </div>
   		  <div class="form-group">
-  		      <label for="exampleFormControlInput1">Phone Number</label>
-  		      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Dan Rhoton">
+  		      <label for="phone">Phone Number</label>
+  		      <input type="text" class="form-control" id="phone" placeholder="Dan Rhoton">
   		  </div>
   		  <div class="form-group">
   		      <label for="address">Address</label>
