--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,3 +1,121 @@
-<p>
-  quiz works!
-</p>
+
+  <div class="container-fluid text-left">
+  	<div class="mb-2">
+		<img src="http://placehold.it/200x100?text=Logo" alt="" />
+  	</div>
+  	<hr />
+  	<h1>Quiz</h1>
+  	<div>
+  		<form>
+  		  <div class="form-group">
+  		    Gender
+  		    <div class="form-check">
+  		      <input class="form-check-input" type="radio" name="gender" id="gender1" value="female" >
+  		      <label class="form-check-label" for="gender1">
+  		        Female
+  		      </label>
+  		    </div>
+  		    <div class="form-check">
+  		      <input class="form-check-input" type="radio" name="gender" id="gender2" value="male" >
+  		      <label class="form-check-label" for="gender2">
+  		        Male
+  		      </label>
+  		    </div>
+  		    <div class="form-check">
+  		      <input class="form-check-input" type="radio" name="gender" id="gender3" value="other" >
+  		      <label class="form-check-label" for="gender3">
+  		        Other
+  		      </label>
+  		    </div>
+  		  </div>
+  		  <div class="form-group">
+  		      <label for="year">Birth Year</label>
+  		      <select class="form-control" id="year">
+  		      	<option value="1990">1990</option>
+  		      	<option value="1991">1991</option>
+  		      	<option value="1992">1992</option>
+  		      	<option value="1993">1993</option>
+  		      	<option value="1994">1994</option>
+  		      	<option value="1995">1995</option>
+  		      	<option value="1996">1996</option>
+  		      	<option value="1997">1997</option>
+  		      	<option value="1998">1998</option>
+  		      	<option value="1999">1999</option>
+  		      	<option value="2000">2000</option>
+  		      	<option value="2001">2001</option>
+  		      	<option value="2002">2002</option>
+  		      	<option value="2003">2003</option>
+  		      	<option value="2004">2004</option>
+  		      	<option value="2005">2005</option>
+  		      	<option value="2006">2006</option>
+  		      	<option value="2007">2007</option>
+  		      	<option value="2008">2008</option>
+  		      	<option value="2009">2009</option>
+  		      </select>
+  		  </div>
+  		  <div class="row">
+  		  	<div class="col-md-6">
+  		  		What types of peer pressure have you encountered?
+  		  	</div>
+  		  	<div class="col-md-6">
+  		  		<div class="form-check">
+  		  		  <input class="form-check-input" type="checkbox" value="scenario1" id="scenario">
+  		  		  <label class="form-check-label" for="scenario">
+  		  		    Scenario 1
+  		  		  </label>
+  		  		</div>
+  		  		<div class="form-check">
+  		  		  <input class="form-check-input" type="checkbox" value="scenario2" id="scenario">
+  		  		  <label class="form-check-label" for="scenario">
+  		  		    Scenario 2
+  		  		  </label>
+  		  		</div>
+  		  		<div class="form-check">
+  		  		  <input class="form-check-input" type="checkbox" value="scenario3" id="scenario">
+  		  		  <label class="form-check-label" for="scenario">
+  		  		    Scenario 3
+  		  		  </label>
+  		  		</div>
+  		  		<div class="form-check">
+  		  		  <input class="form-check-input" type="checkbox" value="scenario4" id="scenario">
+  		  		  <label class="form-check-label" for="scenario">
+  		  		    Scenario 4
+  		  		  </label>
+  		  		</div>
+  		  	</div>
+  		  </div>
+  		  <div class="row">
+  		  	<div class="col-md-6">
+  		  		What type of support are you looking for?
+  		  	</div>
+  		  	<div class="col-md-6">
+  		  		<div class="form-check">
+  		  		  <input class="form-check-input" type="checkbox" value="need1" id="supportType">
+  		  		  <label class="form-check-label" for="supportType">
+  		  		    Support Need 1
+  		  		  </label>
+  		  		</div>
+  		  		<div class="form-check">
+  		  		  <input class="form-check-input" type="checkbox" value="need2" id="supportType">
+  		  		  <label class="form-check-label" for="supportType">
+  		  		    Support Need 2
+  		  		  </label>
+  		  		</div>
+  		  		<div class="form-check">
+  		  		  <input class="form-check-input" type="checkbox" value="need3" id="supportType">
+  		  		  <label class="form-check-label" for="supportType">
+  		  		    Support Need 3
+  		  		  </label>
+  		  		</div>
+  		  		<div class="form-check">
+  		  		  <input class="form-check-input" type="checkbox" value="need4" id="supportType">
+  		  		  <label class="form-check-label" for="supportType">
+  		  		    Support Need 4
+  		  		  </label>
+  		  		</div>
+  		  	</div>
+  		  </div>
+   		  <button type="submit" class="btn btn-primary">Submit</button>
+  		</form>
+  	</div>
+  </div>
