--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -6,6 +6,7 @@
   	<div>
   		<img src="http://placehold.it/2000x200?text=Image" class="img-fluid" />
   	</div>
+  	<h1>Sign Up Today!</h1>
   	<div>
   		<form>
   		  <div class="form-group">
