--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -50,7 +50,7 @@
   		  		</div>
   		  	</div>
   		  </div>
-   		  <button type="submit" class="btn btn-primary">Submit</button>
+   		  <button type="submit" class="btn btn-primary" routerLink="../quiz">Submit</button>
   		</form>
   	</div>
   </div>
