--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -115,7 +115,7 @@
   		  		</div>
   		  	</div>
   		  </div>
-   		  <button type="submit" class="btn btn-primary">Submit</button>
+   		  <button type="submit" class="btn btn-primary" routerLink="../chat">Submit</button>
   		</form>
   	</div>
   </div>
