Updated the logo

--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,8 +1,8 @@
 
   <div class="container-fluid text-left">
-  	<div class="mb-2">
-		<img src="http://placehold.it/200x100?text=Logo" alt="" />
-  	</div>
+    <div class="mb-2">
+      <img src="assets/logo.png" alt="" />
+    </div>
   	<hr />
   	<h1>Quiz</h1>
   	<div>
