--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,8 +1,8 @@
 
   <div class="container-fluid text-left">
-  	<div class="mb-2">
-		<img src="http://placehold.it/200x100?text=Logo" alt="" />
-  	</div>
+    <div class="mb-2">
+      <img src="assets/logo.png" alt="" />
+    </div>
   	<div>
   		<img src="http://placehold.it/2000x200?text=Image" class="img-fluid" />
   	</div>
