--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,3 +1,34 @@
-<p>
-  chat works!
-</p>
+<div class="container-fluid">
+  <div class="col-4">
+    <h2>Users</h2>
+    <hr />
+    <div class="row">
+      <div class="col-3">
+        <img src="http://placehold.it/50x50" class="img-fluid">
+      </div>
+      <div class="col-9">
+        Moderator
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-3">
+        <img src="http://placehold.it/50x50" class="img-fluid">
+      </div>
+      <div class="col-9">
+        User1
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-3">
+        <img src="http://placehold.it/50x50" class="img-fluid">
+      </div>
+      <div class="col-9">
+        User2
+      </div>
+    </div>
+  </div>
+  <div class="col-8">
+    <h2>Chat Room 1</h2>
+    <hr />
+  </div>
+</div>
