--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -13,8 +13,10 @@
       </form>
     </div>
   	<div>
+      <img src="assets/logo.png" alt="" style="position:absolute;top:10px;left:0;z-index: 10;" />
+
   		<img src="http://placehold.it/2000x500?text=Hero" class="img-fluid" />
-  		<button style="position:absolute;top:0;right:0;" (click)="toggleLogin()">Login</button>
+  		<button style="position:absolute;top:0;right:0;z-index: 10;" (click)="toggleLogin()">Login</button>
   	</div>
   	<div class="bg-secondary">
   		<h2>What?</h2>
