--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,7 +1,7 @@
 
-<div class="container-fluid">
+<div class="container-fluid" style="height:100vh;">
 	 <div class="row">
-	  <div class="col-4">
+	  <div class="col-4 border-right">
 	    <h2>Users</h2>
 	    <hr />
 	    <div class="row">
@@ -35,7 +35,7 @@
 		    <hr />
 		</div>
 	    <div id="chatWindow" style="flex:1;"></div>
-	    <div class="form-group border">
+	    <div class="form-group border-top">
 	        <input type="text" class="form-control" id="message" />
 	    </div>
 	  </div>
