--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,7 +1,7 @@
 
   <div class="container-fluid text-left">
     <div class="mb-2">
-      <img src="assets/logo.png" alt="" />
+      <img src="assets/logo.png" alt="" style="max-width: 120px;" />
     </div>
   	<div>
   		<img src="http://placehold.it/2000x200?text=Image" class="img-fluid" />
