--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -13,7 +13,7 @@
       </form>
     </div>
   	<div>
-      <img src="assets/logo.png" alt="" style="position:absolute;top:10px;left:0;z-index: 10;" />
+      <img src="assets/logo.png" alt="" style="position:absolute;top:10px;left:0;z-index: 10;max-width: 120px;" />
 
   		<img src="http://placehold.it/2000x500?text=Hero" class="img-fluid" />
   		<button style="position:absolute;top:0;right:0;z-index: 10;" (click)="toggleLogin()">Login</button>
