--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,7 +1,7 @@
 
   <div class="container-fluid text-left">
     <div class="mb-2">
-      <img src="assets/logo.png" alt="" />
+      <img src="assets/logo.png" alt="" style="max-width: 120px;" />
     </div>
   	<hr />
   	<h1>Quiz</h1>
