--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -18,21 +18,21 @@
   		<img src="http://placehold.it/2000x500?text=Hero" class="img-fluid" />
   		<button style="position:absolute;top:0;right:0;z-index: 10;" (click)="toggleLogin()">Login</button>
   	</div>
-  	<div class="bg-secondary">
+  	<div class="bg-secondary p-5">
   		<h2>What?</h2>
   		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quasi fugit eligendi, pariatur ipsa suscipit. Expedita fugiat, eius dolorum officia vel, natus suscipit atque tempore repudiandae praesentium consequatur, aperiam illum.</p>
   	</div>
-  	<div class="bg-light">
+  	<div class="bg-light p-5">
   		<h2>Why?</h2>
   		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quasi fugit eligendi, pariatur ipsa suscipit. Expedita fugiat, eius dolorum officia vel, natus suscipit atque tempore repudiandae praesentium consequatur, aperiam illum.</p>
   	</div>
   	<div>
   		<img src="http://placehold.it/2000x500?text=Hero" class="img-fluid" /><br />
   		<div class="row">
-  			<div class="col-md-6">
+  			<div class="col-md-6 p-3">
   				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor est velit impedit, nam autem tempora deleniti delectus iste porro nostrum ut harum sunt quam facilis labore, quidem. Nulla, facilis, odio.</p>
   			</div>
-  			<div class="col-md-6">
+  			<div class="col-md-6 p-3 text-center">
   				<button routerLink="signup">Sign Up!</button>
   			</div>
   		</div>
